unix WIP: Bring back cygwin
cygwin has no pthread_barrier_t as Android.
TODO: uv__io_poll

--- a/Makefile.am
+++ b/Makefile.am
@@ -242,6 +242,12 @@ libuv_la_CFLAGS += -D__EXTENSIONS__ -D_XOPEN_SOURCE=500
 libuv_la_SOURCES += src/unix/sunos.c
 endif
 
+if CYGWIN
+libuv_la_CFLAGS += -D_GNU_SOURCE
+libuv_la_SOURCES += src/unix/cygwin.c \
+                    src/unix/pthread-fixes.c
+endif
+
 if HAVE_DTRACE
 BUILT_SOURCES = include/uv-dtrace.h
 CLEANFILES += include/uv-dtrace.h
