--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,7 @@ AM_CONDITIONAL([NETBSD],  [AS_CASE([$host_os], [netbsd*],  [true], [false])])
 AM_CONDITIONAL([OPENBSD], [AS_CASE([$host_os], [openbsd*], [true], [false])])
 AM_CONDITIONAL([SUNOS],   [AS_CASE([$host_os], [solaris*], [true], [false])])
 AM_CONDITIONAL([WINNT],   [AS_CASE([$host_os], [mingw*],   [true], [false])])
+AM_CONDITIONAL([CYGWIN],  [AS_CASE([$host_os], [cygwin*],  [true], [false])])
 PANDORA_ENABLE_DTRACE
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
